opam-version: "2.0"
synopsis: "Automatically synthesize a config.ml for a MirageOS Unikernel"
description: """
This tool aims to help MirageOS unikernel authors synthesize the contents of the
`config.ml` file by analyzing the unikernel implementation.
While still experimental, the hope is to integrate this with the mirage
tool upstream at some point.
"""
maintainer: "team@robur.coop"
authors: "Robur Team <team@robur.coop>"
license: "ISC"
homepage: "https://github.com/roburio/mirage-noconfig"
bug-reports: "https://github.com/roburio/mirage-noconfig/issues"
dev-repo: "git+https://github.com/roburio/mirage-noconfig.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "2.0"}
  "fmt"
  "cmdliner"
  "astring"
  "opam-file-format"
  "ocaml-migrate-parsetree"
  "logs"
  "rresult"
  "alcotest" { with-test }
]
